--- a/env.example
+++ b/env.example
@@ -1,2 +1,8 @@
 DATABASE_URL=
 BETTER_AUTH_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
