--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,24 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Setup PostgreSQL
+        uses: harmon758/postgresql-action@v1
+        with:
+          postgresql version: "15"
+          postgresql db: "bewear_test"
+          postgresql user: "postgres"
+          postgresql password: "postgres"
+
+      - name: Run database migrations
+        run: npm run db:push
+        env:
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/bewear_test
+
       - name: Run ESLint
         run: npm run lint
 
       - name: Type check
-        run: npm run type:check
+        run: npm run type-check
 
       - name: Build application
         run: npm run build
